[package]
name = "ctv"
license = "MIT"
version = "0.1.5"
authors = ["Angelina Tsuboi <angelina.t1832@gmail.com>"]
description = "A highly configurable tree file view visualizer CLI tool"
readme = "README.md"
homepage = "https://github.com/angelina-tsuboi/ctv"
repository = "https://github.com/angelina-tsuboi/ctv"
keywords = ["cli", "treeview", "tree", "visualizer", "file"]
categories = ["command-line-utilities"]
edition = "2018"
license-file = "license.txt"
include = ["/src", ".env", "README.md", "contributing.md", "Cargo.toml", "config.toml", "media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humansize = "1.1.1"
libc = "0.2.95"
structopt = "0.3.21"
termion = "1.5.6"
filetime = "0.2"
users = "0.11.0"
chrono = "0.4"
dotenv = "0.14.1"
config = "0.11"