[package]
name = "ctv"
license = "MIT"
version = "0.3.1"
authors = ["Angelina Tsuboi <angelina.t1832@gmail.com>"]
description = "A highly configurable tree file view visualizer CLI tool"
readme = "README.md"
homepage = "https://github.com/angelina-tsuboi/ctv"
repository = "https://github.com/angelina-tsuboi/ctv"
keywords = ["cli", "treeview", "tree", "visualizer", "file"]
categories = ["command-line-utilities"]
edition = "2018"
include = ["/src", "README.md", "contributing.md", "Cargo.toml", "media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chrono = "0.4"
clap = { version = "3.0.14", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
figment = { version = "0.10.6", features = ["toml", "env"] }
filetime = "0.2"
humansize = "1.1.1"
libc = "0.2.95"
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5.8"
users = "0.11.0"
